Update execution counts in Jupyter notebook and add BatchNormalization layer to the neural network model

--- a/GABRIEL/THE GAB MODEL 1.ipynb
+++ b/GABRIEL/THE GAB MODEL 1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "id": "443737e3",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "324df8bd",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fdbf0b7d",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a71b8ea0",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fc29f342",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4fd1c3b2",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5bc7791d",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3eede746",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7c611968",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e08e4a32",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "33e70147",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "add6e86f",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "12acefa9",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "6b4c3b8d",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "id": "422ac59e",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 17,
    "id": "0e0c906d",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 18,
    "id": "eb58d46a",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 36,
    "id": "f25a2ae2",
    "metadata": {},
    "outputs": [
@@ -484,34 +484,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 5ms/step - accuracy: 0.0010 - loss: 0.6717 - val_accuracy: 0.0000e+00 - val_loss: 0.6781\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6715 - val_accuracy: 0.0000e+00 - val_loss: 0.6819\n",
       "Epoch 2/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 5ms/step - accuracy: 0.0000e+00 - loss: 0.6693 - val_accuracy: 0.0000e+00 - val_loss: 0.6785\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6701 - val_accuracy: 0.0000e+00 - val_loss: 0.6793\n",
       "Epoch 3/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6690 - val_accuracy: 0.0000e+00 - val_loss: 0.6781\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6698 - val_accuracy: 0.0000e+00 - val_loss: 0.6776\n",
       "Epoch 4/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6684 - val_accuracy: 0.0000e+00 - val_loss: 0.6773\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6697 - val_accuracy: 0.0000e+00 - val_loss: 0.6788\n",
       "Epoch 5/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6680 - val_accuracy: 0.0000e+00 - val_loss: 0.6774\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6695 - val_accuracy: 0.0000e+00 - val_loss: 0.6806\n",
       "Epoch 6/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6676 - val_accuracy: 0.0000e+00 - val_loss: 0.6771\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6696 - val_accuracy: 0.0000e+00 - val_loss: 0.6795\n",
       "Epoch 7/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6673 - val_accuracy: 0.0000e+00 - val_loss: 0.6774\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6695 - val_accuracy: 0.0000e+00 - val_loss: 0.6787\n",
       "Epoch 8/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6668 - val_accuracy: 0.0000e+00 - val_loss: 0.6778\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6695 - val_accuracy: 0.0000e+00 - val_loss: 0.6787\n",
       "Epoch 9/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 6ms/step - accuracy: 6.7590e-04 - loss: 0.6666 - val_accuracy: 0.0000e+00 - val_loss: 0.6773\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6694 - val_accuracy: 0.0000e+00 - val_loss: 0.6787\n",
       "Epoch 10/10\n",
-      "\u001b[1m2959/2959\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 6ms/step - accuracy: 0.0000e+00 - loss: 0.6667 - val_accuracy: 0.0000e+00 - val_loss: 0.6771\n"
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 7ms/step - accuracy: 0.0000e+00 - loss: 0.6694 - val_accuracy: 0.0000e+00 - val_loss: 0.6800\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x17b04925e90>"
+       "<keras.src.callbacks.history.History at 0x196207cc380>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,6 +521,7 @@
     "\n",
     "model_full = models.Sequential([\n",
     "    layers.Input(shape=(X_train.shape[1],)),\n",
+    "    layers.BatchNormalization(),\n",
     "    layers.Dense(128, activation='relu'),\n",
     "    layers.Dense(128, activation='relu'),\n",
     "    layers.Dense(64, activation='sigmoid'),\n",
@@ -532,16 +533,24 @@
     "    layers.Dense(16, activation='sigmoid'),\n",
     "    layers.Dense(16, activation='relu'),\n",
     "    layers.Dense(16, activation='relu'),\n",
+    "    layers.Dense(32, activation='sigmoid'),\n",
+    "    layers.Dense(32, activation='relu'),\n",
+    "    layers.Dense(32, activation='relu'),\n",
+    "    layers.Dense(64, activation='sigmoid'),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(128, activation='relu'),\n",
+    "    layers.Dense(128, activation='relu'),\n",
     "    layers.Dense(Y_train.shape[1], activation='sigmoid')\n",
     "])\n",
     "\n",
     "model_full.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "model_full.fit(X_train, Y_train, epochs=10, batch_size=1, validation_data=(X_test, Y_test))"
+    "model_full.fit(X_train, Y_train, epochs=10, batch_size=2, validation_data=(X_test, Y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 37,
    "id": "16f3fa8a",
    "metadata": {},
    "outputs": [
@@ -549,22 +558,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step\n"
+      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5403870558375634)"
+       "np.float64(0.542766497461929)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = model_full.predict(X_validation).round()\n",
+    "save = {}\n",
+    "for i in range(1, len(Y_validation)):\n",
+    "    save[Y_validation.index[i]] = accuracy_score(Y_validation.iloc[i].tolist(), result[i])\n",
+    "\n",
+    "mean = np.mean(list(save.values()))\n",
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "90237226",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 26ms/step - accuracy: 0.0014 - loss: 0.6696 - val_accuracy: 0.0000e+00 - val_loss: 0.6761\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 25ms/step - accuracy: 0.0068 - loss: 0.6535 - val_accuracy: 0.0233 - val_loss: 0.6795\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 26ms/step - accuracy: 0.0068 - loss: 0.6348 - val_accuracy: 0.0122 - val_loss: 0.6902\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 27ms/step - accuracy: 0.0145 - loss: 0.6105 - val_accuracy: 0.0162 - val_loss: 0.7059\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 27ms/step - accuracy: 0.0152 - loss: 0.5876 - val_accuracy: 0.0193 - val_loss: 0.7183\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 27ms/step - accuracy: 0.0179 - loss: 0.5682 - val_accuracy: 0.0071 - val_loss: 0.7383\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 28ms/step - accuracy: 0.0162 - loss: 0.5507 - val_accuracy: 0.0162 - val_loss: 0.7513\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 29ms/step - accuracy: 0.0176 - loss: 0.5368 - val_accuracy: 0.0112 - val_loss: 0.7643\n",
+      "Epoch 9/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 28ms/step - accuracy: 0.0196 - loss: 0.5232 - val_accuracy: 0.0132 - val_loss: 0.7762\n",
+      "Epoch 10/10\n",
+      "\u001b[1m1480/1480\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 27ms/step - accuracy: 0.0176 - loss: 0.5121 - val_accuracy: 0.0112 - val_loss: 0.7937\n",
+      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 13ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.512357233502538)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try a neural network model with TensorFlow\n",
+    "\n",
+    "model_full = models.Sequential([\n",
+    "    layers.Input(shape=(1, X_train.shape[1])),\n",
+    "    \n",
+    "    layers.LSTM(256, return_sequences=True),\n",
+    "    #layers.LSTM(64, return_sequences=True),\n",
+    "    layers.LSTM(32),\n",
+    "    #layers.Dropout(0.05),\n",
+    "    #layers.Dense(64, activation='relu'),\n",
+    "    #layers.Dense(32, activation='relu'),\n",
+    "    #layers.Dense(16, activation='relu'),\n",
+    "    layers.Dropout(0.05),\n",
+    "    layers.Dense(Y_train.shape[1], activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "model_full.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Reshape data for LSTM (add timestep dimension)\n",
+    "X_train_reshaped = X_train.values.reshape((X_train.shape[0], 1, X_train.shape[1]))\n",
+    "X_test_reshaped = X_test.values.reshape((X_test.shape[0], 1, X_test.shape[1]))\n",
+    "X_validation_reshaped = X_validation.values.reshape((X_validation.shape[0], 1, X_validation.shape[1]))\n",
+    "\n",
+    "model_full.fit(X_train_reshaped, Y_train, epochs=10, batch_size=2, validation_data=(X_test_reshaped, Y_test))\n",
+    "\n",
+    "result = model_full.predict(X_validation_reshaped).round()\n",
     "save = {}\n",
     "for i in range(1, len(Y_validation)):\n",
     "    save[Y_validation.index[i]] = accuracy_score(Y_validation.iloc[i].tolist(), result[i])\n",
